--- a/style.css
+++ b/style.css
@@ -1,64 +1,137 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    display: grid;
-    grid-template-columns: 1fr 5fr;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
 }
 
 .header {
-    background-color: blue;
-    border: 5px solid black;
-    grid-column: 2 / 3;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
+  background-color: blue;
+  border: 5px solid black;
+  grid-column: 2 / 3;
+  display: grid;
 }
 
 .header-top {
-    display: grid;
-    grid-template-columns: 1fr auto 1fr 1fr 2fr;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.search-div {
+  display: flex;
 }
 
 .search-icon {
-    height: 50px;
-    width: auto;
+  height: 50px;
+  width: auto;
+}
+
+#search {
+  height: 35px;
+  border-radius: 20px;
+  width: 500px;
 }
 
 .account-icon {
-    height: 50px;
-    width: auto;
-    border-radius: 20px;
+  height: 50px;
+  width: auto;
+  border-radius: 20px;
+}
+
+.header-top-right {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-right: 10px;
+  gap: 5px;
 }
 
 .header-bottom {
-    display: grid;
-    grid-template-columns: 2fr 4fr 1fr 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .header-account-icon {
-    height: 80px;
+  height: 80px;
+  width: auto;
+  border-radius: 20px;
+}
+
+.notification-icon {
+    height: 50px;
     width: auto;
-    border-radius: 20px;
+}
+
+.header-name {
+    white-space: nowrap;
+    margin: auto;
+}
+
+.header-bottom div {
+    display: flex;
+    align-items: center;
+}
+
+.account-div {
+    gap: 10px;
+    margin-left: 10px;
+}
+
+.account-banner {
+    flex-direction: column;
+    color: white;
+}
+
+.account-banner p {
+    display: flex;
+    align-self: start;
+}
+
+.header-buttons {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .sidebar {
-    background-color: orange;
-    border: 5px solid black;
+  background-color: orange;
+  border: 5px solid black;
+  grid-column: 1/1;
+  grid-row: 1/3;
+}
+
+.sidebar div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 5px;
+}
+
+.main-content {
+  background-color: antiquewhite;
+  border: 5px solid black;
+  grid-column: 2/3;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+.projects {
     grid-column: 1/1;
     grid-row: 1/3;
 }
 
-.sidebar div {
+.project-cards {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
     gap: 5px;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
 }
 
-.main-content {
-    background-color: antiquewhite;
-    border: 5px solid black;
-    grid-column: 2/3;
+.project-card {
+    width: 100px;
+    height: 200px;
+    background-color: aquamarine;
+    border-radius: 50px;
+    padding: 25px;
 }
