--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body {
 }
 
 .main-content {
-  background-color: antiquewhite;
+  background-color: #f8fafc;
   border: 5px solid black;
   grid-column: 2/3;
   display: grid;
@@ -134,4 +134,22 @@ body {
     background-color: aquamarine;
     border-radius: 50px;
     padding: 25px;
+}
+
+.announcements-cards {
+    display: grid;
+    grid-template-rows:  repeat(3, 1fr);
+    gap: 5px;
+    background-color: #e2e8f0;
+    border-radius: 15px;
+    padding: 5px;
+}
+
+.trending-cards {
+    display: grid;
+    grid-template-rows:  repeat(3, 1fr);
+    gap: 5px;
+    background-color: #e2e8f0;
+    border-radius: 15px;
+    padding: 5px;
 }
