--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@ body {
 }
 
 .header {
-  background-color: blue;
-  border: 5px solid black;
+  background-color: #fafaf9;
   grid-column: 2 / 3;
   display: grid;
 }
@@ -19,10 +18,13 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .search-div {
   display: flex;
+  align-items: center;
 }
 
 .search-icon {
@@ -52,6 +54,7 @@ body {
 .header-bottom {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  margin-bottom: 5px;
 }
 
 .header-account-icon {
@@ -61,95 +64,110 @@ body {
 }
 
 .notification-icon {
-    height: 50px;
-    width: auto;
+  height: 50px;
+  width: auto;
 }
 
 .header-name {
-    white-space: nowrap;
-    margin: auto;
+  white-space: nowrap;
+  margin: auto;
 }
 
 .header-bottom div {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .account-div {
-    gap: 10px;
-    margin-left: 10px;
+  gap: 10px;
+  margin-left: 10px;
 }
 
 .account-banner {
-    flex-direction: column;
-    color: white;
+  flex-direction: column;
+  color: white;
 }
 
 .account-banner p {
-    display: flex;
-    align-self: start;
+  display: flex;
+  align-self: start;
 }
 
 .header-buttons {
-    display: flex;
-    justify-content: space-evenly;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .sidebar {
-  background-color: orange;
-  border: 5px solid black;
+  background-color: #38bdf8;
   grid-column: 1/1;
   grid-row: 1/3;
 }
 
 .sidebar div {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
   align-items: center;
   gap: 5px;
 }
 
+.sidebar img {
+    width: 30px;
+    height: auto;
+}
+
+.sidebar p {
+
+}
+
 .main-content {
-  background-color: #f8fafc;
-  border: 5px solid black;
+  background-color: #d6d3d1;
   grid-column: 2/3;
   display: grid;
   grid-template-columns: 3fr 1fr;
 }
 
 .projects {
-    grid-column: 1/1;
-    grid-row: 1/3;
+  grid-column: 1/1;
+  grid-row: 1/3;
 }
 
 .project-cards {
-    display: grid;
-    gap: 5px;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
 .project-card {
-    width: 100px;
-    height: 200px;
-    background-color: aquamarine;
-    border-radius: 50px;
-    padding: 25px;
+  width: 200px;
+  height: 200px;
+  border-radius: 50px;
+  padding: 25px;
 }
 
 .announcements-cards {
-    display: grid;
-    grid-template-rows:  repeat(3, 1fr);
-    gap: 5px;
-    background-color: #e2e8f0;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
+  padding: 5px;
+}
+
+.announcement-card,
+.trending-card, .project-card {
+  background-color: #fafaf9;
+}
+
+.announcement-card, .trending-card {
     border-radius: 15px;
     padding: 5px;
 }
 
 .trending-cards {
-    display: grid;
-    grid-template-rows:  repeat(3, 1fr);
-    gap: 5px;
-    background-color: #e2e8f0;
-    border-radius: 15px;
-    padding: 5px;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
+  padding: 5px;
 }
